SERVER-132110 DDL coordinators: create new collections with `allowChunkOperations: false` (#59761)

GitOrigin-RevId: a36213d6f25122af700491e5de025a22323d4323