src/mongo/db/global_catalog/ddl/create_collection_coordinator.cpp
@@ -1349,6 +1349,15 @@ boost::optional<UUID> createCollectionAndIndexes(
     return *sharding_ddl_util::getCollectionUUID(opCtx, translatedNss);
 }
 
+bool shouldDisallowChunkOperations(AuthoritativeMetadataAccessLevelEnum authMetadataAccessLevel,
+                                   bool isUnsplittable) {
+    // Chunk operations are disallowed on unsplittable collections, there is no need to explicitly
+    // block them with `allowChunkOperations: false`. Not doing it saves an `allowChunkOperations:
+    // true` command later.
+    return authMetadataAccessLevel >= AuthoritativeMetadataAccessLevelEnum::kWritesAllowed &&
+        !isUnsplittable;
+}
+
 /**
  * Does the following writes:
  * 1. Replaces the config.chunks entries for the new collection;
@@ -1365,7 +1374,8 @@ void commit(OperationContext* opCtx,
             const NamespaceString& nss,
             const std::set<ShardId>& shardsHoldingData,
             const TranslatedRequestParams& translatedRequestParams,
-            std::function<OperationSessionInfo(OperationContext*)> newSessionBuilder) {
+            std::function<OperationSessionInfo(OperationContext*)> newSessionBuilder,
+            AuthoritativeMetadataAccessLevelEnum authMetadataAccessLevel) {
     LOGV2_DEBUG(5277906, 2, "Create collection commit", logAttrs(nss));
 
     if (MONGO_unlikely(nss == NamespaceString::kLogicalSessionsNamespace)) {
@@ -1387,8 +1397,12 @@ void commit(OperationContext* opCtx,
                                Date_t::now(),
                                *collectionUUID,
                                translatedRequestParams.getKeyPattern());
-    if (isUnsplittable(request))
-        coll.setUnsplittable(isUnsplittable(request));
+
+    auto const unsplittable = isUnsplittable(request);
+
+    if (unsplittable) {
+        coll.setUnsplittable(unsplittable);
+    }
 
     const auto& placementVersion = initialChunks->chunks.back().getVersion();
 
@@ -1402,6 +1416,10 @@ void commit(OperationContext* opCtx,
 
     if (request.getUnique()) {
         coll.setUnique(*request.getUnique());
+    }
+
+    if (shouldDisallowChunkOperations(authMetadataAccessLevel, unsplittable)) {
+        coll.setAllowChunkOperations(false);
     }
 
     auto ops = sharding_ddl_util::getOperationsToCreateOrShardCollectionOnShardingCatalog(
@@ -2242,15 +2260,17 @@ void CreateCollectionCoordinator::_commitOnGlobalCatalog(
         involvedShards.emplace(chunk.getShard());
     }
 
-    commit(opCtx,
-           **executor,
-           _request,
-           _initialChunks,
-           _uuid,
-           nss(),
-           involvedShards,
-           *_doc.getTranslatedRequestParams(),
-           [this](OperationContext* opCtx) { return getNewSession(opCtx); });
+    commit(
+        opCtx,
+        **executor,
+        _request,
+        _initialChunks,
+        _uuid,
+        nss(),
+        involvedShards,
+        *_doc.getTranslatedRequestParams(),
+        [this](OperationContext* opCtx) { return getNewSession(opCtx); },
+        _doc.getAuthoritativeMetadataAccessLevel());
     const auto& commitTime = _initialChunks->chunks.back().getVersion().getTimestamp();
     _notifyChangeStreamReadersOnPlacementChanged(opCtx, commitTime, executor, token);
 
@@ -2393,6 +2413,17 @@ void CreateCollectionCoordinator::_exitCriticalSection(
                                       _firstExecution /* throwIfReasonDiffers */,
                                       _critSecReason,
                                       originalNss());
+
+    if (const auto authMetadataAccessLevel = _doc.getAuthoritativeMetadataAccessLevel();
+        shouldDisallowChunkOperations(authMetadataAccessLevel, isUnsplittable(_request))) {
+        // The commit creates the collection with allowChunkOperations set to false. After the
+        // critical section is released, we need to enable chunk operations.
+        if (!_firstExecution && !_uuid) {
+            _uuid = sharding_ddl_util::getCollectionUUID(opCtx, nss());
+        }
+        sharding_ddl_util::resumeMigrations(
+            opCtx, nss(), _uuid, [&] { return getNewSession(opCtx); }, authMetadataAccessLevel);
+    }
 }
 
 ExecutorFuture<void> CreateCollectionCoordinator::_cleanupOnAbort(
